[project]
name = "codesystem-poller"
version = "0.1.0"
description = "FHIR CodeSystem change detection poller with transactional outbox"
requires-python = ">=3.12,<3.14"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pika>=1.3",
    "apscheduler>=3.10,<4",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
